# substrate-node-template

./: Cargo.toml
node/: Cargo.toml
node/src/: service.rs
pallets/kitties/: Cargo.toml  README.md
pallets/kitties/src/: lib.rs  tests.rs
pallets/ocw/: Cargo.toml  README.md
pallets/ocw/src/: lib.rs
pallets/poe/: Cargo.toml  README.md
pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
